--- a/style.css
+++ b/style.css
@@ -401,5 +401,50 @@ margin: 5rem auto;
   justify-content: center;
   flex-wrap: wrap;
 }
+.contact form .input-box input,
+.contact form textarea{
+  width: 100%;
+  padding: 1.8rem;
+  color: var(--text-color);
+  background-color: var(--bg-color);
+  border: 2px solid var(--main-color);
+  border-radius: 2rem;
+  margin: 1rem 0;
+  font-size: 1rem;
+  resize: none;
+}
+
 /* Contact Section End */
 /* Contact Section End */
+
+/* Footer Section Start */
+/* Footer Section Start */
+.footer{
+  background-color: var(--second-bg-color);
+  text-align: center;
+  width: 100%;
+  bottom: 0;
+  padding: 15px 0;
+}
+.footer ul{
+  font-size: 18px;
+  line-height: 1.6;
+  text-align: center;
+}
+.list li{
+  display: inline-block;
+  padding: 0 15px;
+}
+.list li a{
+  color: white;
+  border-bottom: 3px solid transparent;
+}
+.list li a:hover{
+  border-bottom: 3px solid var(--main-color);
+}
+.footer .copyright{
+margin-top: 50px;
+font-size: 14px;
+}
+/* Footer Section End */
+/* Footer Section End */
